# kova

./: .env.example  .gitignore  .vercelignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  README.md  package-lock.json  package.json  tsconfig.json
app/: .gcloudignore  package.json  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/demo/: page.tsx
app/src/components/: DemoDashboard.tsx  DemoInterface.tsx  EscrowTracker.tsx  EscrowVault.tsx  EscrowVaultHero.tsx  SplitView.tsx  StatusBadge.tsx  VaultVisual.tsx
app/src/lib/: escrow.ts  i18n.ts  x402.ts
backend/: .gcloudignore  package-lock.json  package.json  tsconfig.json
backend/api/: escrows.ts  health.ts
backend/api/demo/: run.ts
backend/api/demo/honest/: direct.ts  health.ts
backend/api/demo/honest/escrow/: fulfill.ts
backend/api/demo/malicious/: direct.ts  health.ts
backend/api/demo/malicious/escrow/: fulfill.ts
backend/src/: common.ts  escrow-client.ts  keypair.ts  middleware.ts  run-store.ts  runtime.ts  server.ts
demo-servers/: common.ts  honest-server.ts  malicious-server.ts
middleware/: package.json  tsconfig.json
middleware/src/: escrow-client.ts  hash-utils.ts  idl.ts  index.ts  server.ts  types.ts
pitch/: deck-outline.md  demo-script.md  judge-qa.md  manus-deck-prompt.md  submission-checklist.md  submission-copy.md
programs/x402-escrow/: Cargo.toml
programs/x402-escrow/src/: lib.rs
scripts/: anchor-test.sh  cloudrun-deploy-backend.sh  cloudrun-deploy-frontend.sh  devnet-deploy.sh  devnet-smoke.ts  localnet-start.sh  run-anchor.sh
tests/: x402-escrow.ts
