[package]
name = "x402-escrow"
version = "0.1.0"
description = "x402 escrow protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x402_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
